# dentai-backend

./: .gitignore  Dockerfile  Makefile  README.md  dev_server.sh  docker-compose.yml  prestart.sh  pyproject.toml
alembic/: env.py  script.py.mako
app/api/: deps.py  exceptions.py
app/api/v1/: api.py
app/api/v1/endpoints/: audio_ws.py  openai.py
app/core/: config.py
app/db/: __init__.py  base.py
app/integrations/: dental_agent.py
app/schemas/: dental_schema.py  prompts.py  requests_schema.py  response_schema.py
config/: .env
data/: dent-hist.md
scripts/: drop_to_session.py
