[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Piotr Sobusiak <piotr.sobusiak@themomentum.ai>", "Bartosz Michalak <bartosz.michalak@themomentum.ai>", "Filip Begiełło <filip.begiello@applover.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
cryptography = "^42.0.7"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.0"
openai = "^1.76.0"
openai-agents = "^0.0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
autoflake = "^2.3.1"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
